# smart-invoice-parser

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_ES.md  docker-compose.yml  pyproject.toml
.agents/skills/testing-smart-invoice-parser/: SKILL.md
.github/workflows/: ci.yml
src/: main.py
src/api/: routes.py
src/core/: config.py  database.py
src/models/: invoice.py
src/services/: ocr.py  parser.py
templates/: index.html
tests/: test_api.py  test_parser.py
